# The-Forge

./: CMakeLists.txt  README.md
include/gfx_theforge/: al2o3_helpers.h  enums.h  resourceloader.h  resourceloaders_structs.h  shaderreflection.h  structs.h  theforge.h
src/: al2o3_helpers.cpp  theforge.cpp
src/OS/Android/: AndroidBase.cpp  AndroidFileSystem.cpp
src/OS/Camera/: FpsCameraController.cpp  GuiCameraController.cpp
src/OS/Core/: FileSystem.cpp  GPUConfig.h
src/OS/Darwin/: DarwinTime.cpp
src/OS/Image/: Image.cpp  Image.h  ImageEnums.h  ImageHelper.h
src/OS/Input/: InputSystem.cpp  InputSystem.h
src/OS/Interfaces/: IApp.h  ICameraController.h  ILog.h  IMemory.h  IMiddleware.h  IOperatingSystem.h  IProfiler.h
src/OS/Linux/: LinuxFileSystem.cpp
src/OS/iOS/: iOSBase.mm  iOSFileSystem.mm  iOSLog.cpp
src/OS/macOS/: macOSFileSystem.mm  macOsTime.cpp
src/Renderer/: CommonShaderReflection.cpp  GpuProfiler.cpp  GpuProfiler.h  IRay.h  IRenderer.h  IShaderReflection.h  ResourceLoader.cpp  ResourceLoader.h
src/Renderer/Direct3D11/: Direct3D11.cpp  Direct3D11Commands.h  Direct3D11ShaderReflection.cpp
src/Renderer/Direct3D12/: Direct3D12.cpp  Direct3D12CapBuider.h  Direct3D12CapBuilder.h  Direct3D12Hooks.cpp  Direct3D12MemoryAllocator.cpp  Direct3D12Raytracing.cpp  Direct3D12ShaderReflection.cpp
src/Renderer/Metal/: MetalCapBuilder.h  MetalMemoryAllocator.h  MetalRaytracing.mm  MetalRenderer.mm  MetalShaderReflection.mm
src/Renderer/Vulkan/: Vulkan.cpp  VulkanCapsBuilder.h  VulkanRaytracing.cpp  VulkanShaderReflection.cpp
src/Tools/SpirvTools/: SpirvTools.cpp  SpirvTools.h
